[gd_scene load_steps=17 format=3 uid="uid://derm5yveao7fo"]

[ext_resource type="Script" path="res://scripts/game/game.gd" id="1_fawgn"]
[ext_resource type="Script" path="res://scripts/game/background.gd" id="2_5sa0w"]
[ext_resource type="PackedScene" uid="uid://b1akmr5ryofqc" path="res://scenes/ball.tscn" id="3_kpogh"]
[ext_resource type="FontFile" uid="uid://dxlsut35eqna4" path="res://assets/font.otf" id="4_w5prd"]
[ext_resource type="PackedScene" uid="uid://dmeagorjxtk7s" path="res://scenes/life_bar.tscn" id="5_uusjf"]
[ext_resource type="Texture2D" uid="uid://bgxxiu84vgeqe" path="res://assets/gui/backgrounds_panels/victory_panel.png" id="6_uawji"]
[ext_resource type="StyleBox" uid="uid://dfimjnyybofjb" path="res://resources/button_style_box_texture.tres" id="7_m8u46"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4ki1q"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hffrm"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_oqk7l"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1ceoq"]
distance = 50.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q333l"]
a = Vector2(0, 668)
b = Vector2(640, 668)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6u5xx"]
a = Vector2(640, 668)
b = Vector2(1280, 668)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a26hg"]
size = Vector2(20, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26p40"]
size = Vector2(20, 140)

[sub_resource type="LabelSettings" id="LabelSettings_u0y47"]
font = ExtResource("4_w5prd")
font_size = 96
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_fawgn")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.667, 0.667)
centered = false
script = ExtResource("2_5sa0w")

[node name="WorldBoundaries" type="StaticBody2D" parent="."]
collision_layer = 12
collision_mask = 0

[node name="LeftWall" type="CollisionShape2D" parent="WorldBoundaries"]
shape = SubResource("WorldBoundaryShape2D_4ki1q")

[node name="RightWall" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(1280, 0)
shape = SubResource("WorldBoundaryShape2D_hffrm")

[node name="Ceiling" type="CollisionShape2D" parent="WorldBoundaries"]
shape = SubResource("WorldBoundaryShape2D_oqk7l")

[node name="Ground" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(0, 720)
shape = SubResource("WorldBoundaryShape2D_1ceoq")

[node name="BallDetection" type="Node" parent="."]

[node name="LeftGround" type="Area2D" parent="BallDetection"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetection/LeftGround"]
shape = SubResource("SegmentShape2D_q333l")

[node name="RightGround" type="Area2D" parent="BallDetection"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetection/RightGround"]
shape = SubResource("SegmentShape2D_6u5xx")

[node name="SidesDelimitation" type="StaticBody2D" parent="."]
position = Vector2(640, 360)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesDelimitation"]
shape = SubResource("RectangleShape2D_a26hg")

[node name="Net" type="StaticBody2D" parent="."]
position = Vector2(640, 600)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net"]
shape = SubResource("RectangleShape2D_26p40")

[node name="Ball" parent="." instance=ExtResource("3_kpogh")]
z_index = 1
position = Vector2(640, 420)

[node name="KickOffTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="KickOffGoTimer" type="Timer" parent="."]
one_shot = true

[node name="RoundOverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LifeBars" type="MarginContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/LifeBars"]
layout_mode = 2

[node name="LeftLifeBar" parent="CanvasLayer/GUI/LifeBars/HBoxContainer" instance=ExtResource("5_uusjf")]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightLifeBar" parent="CanvasLayer/GUI/LifeBars/HBoxContainer" instance=ExtResource("5_uusjf")]
layout_mode = 2

[node name="KickOffLabel" type="Label" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -40.0
offset_right = 72.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Go!"
label_settings = SubResource("LabelSettings_u0y47")
horizontal_alignment = 1

[node name="EndGameUI" type="Control" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/GUI/EndGameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -223.0
offset_right = 263.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_uawji")

[node name="Button" type="Button" parent="CanvasLayer/GUI/EndGameUI"]
layout_mode = 0
offset_left = -205.0
offset_top = 125.0
offset_right = -69.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("4_w5prd")
theme_override_styles/normal = ExtResource("7_m8u46")
theme_override_styles/hover = ExtResource("7_m8u46")
theme_override_styles/pressed = ExtResource("7_m8u46")
theme_override_styles/disabled = ExtResource("7_m8u46")
theme_override_styles/focus = ExtResource("7_m8u46")

[connection signal="body_entered" from="BallDetection/LeftGround" to="." method="_on_left_ground_body_entered"]
[connection signal="body_entered" from="BallDetection/RightGround" to="." method="_on_right_ground_body_entered"]
[connection signal="timeout" from="KickOffTimer" to="." method="_on_kick_off_timer_timeout"]
[connection signal="timeout" from="KickOffGoTimer" to="." method="_on_kick_off_go_timer_timeout"]
[connection signal="timeout" from="RoundOverTimer" to="." method="_on_round_over_timer_timeout"]
